--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "route-tree": "npx @tanstack/router-cli generate"
   },
   "dependencies": {
-    "@iconscout/react-unicons": "^2.0.2",
     "@tanstack/react-router": "^1.19.4",
     "@tanstack/router-cli": "^1.19.5",
     "@tanstack/router-vite-plugin": "^1.19.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
