--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "react-ts-vite-eslint-prettier-tailwind",
   "private": true,
   "version": "0.1.0",
+  "homepage": "https://amablerival.github.io/acoustics-portfolio",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -35,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.5.12",
