--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,17 @@
 {
-  "extends": ["prettier", "plugin:node/recommended"],
-  "plugins": ["prettier"],
+  "react/no-unknown-property": ["off", { "ignore": ["JSX", "TSX"] }],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "off"
-      }
-    ],
-    "no-unused-vars": "warn",
-    "no-console": "off",
-    "func-names": "off",
-    "no-process-exit": "off",
-    "object-shorthand": "off",
-    "class-methods-use-this": "off"
+    // "prettier/prettier": [
+    //   "error",
+    //   {
+    //     "endOfLine": "off"
+    //   }
+    // ],
+    // "no-unused-vars": "warn",
+    // "no-console": "off",
+    // "func-names": "off",
+    // "no-process-exit": "off",
+    // "object-shorthand": "off",
+    // "class-methods-use-this": "off"
   }
 }
