--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "route-tree": "npx @tanstack/router-cli generate"
   },
   "dependencies": {
+    "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.15.19",
     "@tanstack/react-router": "^1.19.4",
     "@tanstack/router-cli": "^1.19.6",
     "@tanstack/router-vite-plugin": "^1.19.6",
     "@types/offscreencanvas": "^2019.7.3",
     "@types/three": "^0.162.0",
+    "babel-plugin-glsl": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
