--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,17 @@
 {
   "react/no-unknown-property": ["off", { "ignore": ["JSX", "TSX"] }],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
   "rules": {
-    // "prettier/prettier": [
-    //   "error",
-    //   {
-    //     "endOfLine": "off"
-    //   }
-    // ],
-    // "no-unused-vars": "warn",
-    // "no-console": "off",
-    // "func-names": "off",
-    // "no-process-exit": "off",
-    // "object-shorthand": "off",
-    // "class-methods-use-this": "off"
+    "prettier/prettier": ["error", {}],
+    "no-unused-vars": "warn",
+    "no-console": "off",
+    "func-names": "off",
+    "no-process-exit": "off",
+    "object-shorthand": "off",
+    "class-methods-use-this": "off"
   }
 }
