--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
   "tabWidth": 2,
-  "semi": false,
+  "semi": true,
   "trailingComma": "none",
   "singleQuote": true,
   "proseWrap": "always",
