--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "react/no-unknown-property": ["off", { "ignore": ["JSX", "TSX"] }],
+  "react/no-unknown-property": ["off", { "ignore": ["JSX"] }],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
