--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-feather": "2.0.10",
+    "resolve-lygia": "^1.0.4",
     "three": "0.165.0",
     "uuidv4": "6.2.13"
   },
