--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@tanstack/router-vite-plugin": "1.38.0",
     "@types/offscreencanvas": "2019.7.3",
     "@types/three": "0.165.0",
-    "@uidotdev/usehooks": "2.4.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "babel-plugin-glsl": "1.0.0",
+    "firebase": "^10.12.4",
     "lygia": "1.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
