--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "paths": {
       "@/*": ["*"]
     },
-    "types": ["vite-plugins-glsl/ext"]
+    "types": ["vite-plugin-glsl/ext"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
