--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@uidotdev/usehooks": "^2.4.1",
     "babel-plugin-glsl": "1.0.0",
     "firebase": "^10.12.4",
+    "framer-motion": "^11.3.12",
     "lygia": "1.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-feather": "2.0.10",
     "react-icons": "^5.2.1",
+    "react-svg": "^16.1.34",
     "resolve-lygia": "^1.0.4",
     "three": "0.165.0",
     "uuidv4": "6.2.13"
